[package]
name = "addcombq"
version = "0.1.0"
authors = ["Matt Torrence <gh-Torrencem>"]
edition = "2018"
build = "build.rs"

[lib]
name = "addcombq"
crate-type = ["rlib", "dylib"]

[dependencies]
paste = "0.1.6"
addcomb_comp = { path = "addcomb-comp" }

[dependencies.cpython]
version = "0.3.0"
default-features = false
features = ["python27-sys"]
