[package]
name = "addcombq"
version = "0.2.3"
authors = ["Matt Torrence <gh-Torrencem>"]
edition = "2018"
build = "build.rs"

[lib]
name = "addcombq"
crate-type = ["rlib", "dylib"]

[dependencies]
pyo3 = "0.8.5"
paste = "0.1.6"
addcomb_comp = { path = "addcomb-comp" }
cachetools = { path = "cachetools" }
