[package]
name = "addcomb_comp"
version = "0.1.0"
authors = ["Matt Torrence <gh-Torrencem>"]
edition = "2018"

[lib]
name = "addcomb_comp"
crate-type = ["rlib", "dylib"]

[dependencies]
itertools = "0.8.0"
array_tool = "1.0.3"
specialize = "0.0.3"
paste = "0.1.6"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rustbreak]
path = "rustbreak"
version = "2.0.0"
features = ["bin_enc"]

[dev-dependencies]
rand = "0.6.5"
criterion = "0.3"

[[bench]]
name = "fastset_benches"
harness = false

