[package]
name = "addcomb_comp"
version = "0.1.5"
authors = ["Matt Torrence <gh-Torrencem>"]
edition = "2018"

[lib]
name = "addcomb_comp"
crate-type = ["rlib", "dylib"]

[dependencies]
itertools = "0.8.0"
array_tool = "1.0.3"
specialize = "0.0.3"
paste = "0.1.6"

[dev-dependencies]
rand = "0.6.5"
criterion = "0.3"

[[bench]]
name = "fastset_benches"
harness = false

