[package]
name = "addcombq"
version = "0.1.0"
authors = ["Matt Torrence <gh-Torrencem>"]
edition = "2018"

[lib]
name = "addcombq"
crate-type = ["dylib"]

[dependencies]
itertools = "0.8.0"
array_tool = "1.0.3"

[dev-dependencies]
rand = "0.6.5"

[dependencies.cpython]
version = "0.3.0"
default-features = false
features = ["python27-sys"]
